--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="gallery__grid">
                 <div class="promo-container">
-                    <img src="/img/карусель6.PNG" alt="" class="promo-image" >
+                    <img src="img/карусель6.PNG" alt="" class="promo-image" >
                     <div class="font-gallery" id="trening">Бесплатная тренировка</div>
                     <div class="button-container">
                         <a href="#abon"><button class="cta-button">Подробнее</button></a>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="promo-container">
-                    <img src="/img/imgкарусель2.PNG" alt="кардио" class="promo-image" >
+                    <img src="img/imgкарусель2.PNG" alt="кардио" class="promo-image" >
                     <div class="font-gallery">Кардио тренировка</div>
                     <div class="button-container">
                         <button class="cta-button">Подробнее</button>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="promo-container">
-                    <img src="/img/imgкарусель3.PNG" alt="персональные тренировки" class="promo-image" >
+                    <img src="img/imgкарусель3.PNG" alt="персональные тренировки" class="promo-image" >
                     <div class="font-gallery">Групповые тренировки</div>
                     <div class="button-container">
                         <button class="cta-button">Подробнее</button>
@@ -195,13 +195,13 @@
         </div>
 
         <div class="hero__right">
-            <img src="/img/с1.PNG" alt="Слайд 1" class="slider-image">
-            <img src="/img/с2.PNG" alt="Слайд 2" class="slider-image">
-            <img src="/img/с3.PNG" alt="Слайд 3" class="slider-image">
-            <img src="/img/с4.PNG" alt="Слайд 4" class="slider-image">
-            <img src="/img/с5.PNG" alt="Слайд 5" class="slider-image">
-            <img src="/img/с6.PNG" alt="Слайд 6" class="slider-image">
-            <img src="/img/с7.PNG" alt="Слайд 7" class="slider-image">
+            <img src="img/с1.PNG" alt="Слайд 1" class="slider-image">
+            <img src="img/с2.PNG" alt="Слайд 2" class="slider-image">
+            <img src="img/с3.PNG" alt="Слайд 3" class="slider-image">
+            <img src="img/с4.PNG" alt="Слайд 4" class="slider-image">
+            <img src="img/с5.PNG" alt="Слайд 5" class="slider-image">
+            <img src="img/с6.PNG" alt="Слайд 6" class="slider-image">
+            <img src="img/с7.PNG" alt="Слайд 7" class="slider-image">
         </div>
     </main>
     <script src="pop.js">
@@ -214,7 +214,7 @@
         <div class="trainers-container" id="trainers">
             <div class="trainer-card">
                 <div class="trainer-image">
-                    <img src="/img/тр1.SVG" alt="Тренер 1">
+                    <img src="img/тр1.SVG" alt="Тренер 1">
                 </div>
                 <div class="trainer-info">
                     <h2>Подопригора Юлия</h2>
@@ -224,7 +224,7 @@
 
             <div class="trainer-card">
                 <div class="trainer-image">
-                    <img src="/img/тр2.SVG" alt="Тренер 2">
+                    <img src="img/тр2.SVG" alt="Тренер 2">
                 </div>
                 <div class="trainer-info">
                     <h2>СОЛОВЬЕВ ЮРИЙ</h2>
@@ -234,7 +234,7 @@
 
             <div class="trainer-card">
                 <div class="trainer-image">
-                    <img src="/img/тр3.SVG" alt="Тренер 3">
+                    <img src="img/тр3.SVG" alt="Тренер 3">
                 </div>
                 <div class="trainer-info">
                     <h2>ТИТОВСКИЙ ИЛИЗАР</h2>
