--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container header__container">
             <a href="/" class="logo">
                 <div class="logo2">
-                    <img src="/img/logo22svg.SVG" alt=""></div>
+                    <img src="img/logo22svg.SVG" alt=""></div>
             </a>
             <nav class="nav">
                 <ul class="nav__list">
