--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="trainers-container" id="trainers">
             <div class="trainer-card">
                 <div class="trainer-image">
-                    <img src="img/тр1.svg" alt="Тренер 1">
+                    <img src="img/тр1.SVG" alt="Тренер 1">
                 </div>
                 <div class="trainer-info">
                     <h2>Подопригора Юлия</h2>
@@ -224,7 +224,7 @@
 
             <div class="trainer-card">
                 <div class="trainer-image">
-                    <img src="img/тр2.svg" alt="Тренер 2">
+                    <img src="img/тр2.SVG" alt="Тренер 2">
                 </div>
                 <div class="trainer-info">
                     <h2>СОЛОВЬЕВ ЮРИЙ</h2>
@@ -234,7 +234,7 @@
 
             <div class="trainer-card">
                 <div class="trainer-image">
-                    <img src="img/тр3.svg" alt="Тренер 3">
+                    <img src="img/тр3.SVG" alt="Тренер 3">
                 </div>
                 <div class="trainer-info">
                     <h2>ТИТОВСКИЙ ИЛИЗАР</h2>
